--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <span><img src="logo.jpg" alt=""></span>
             <span><a href="#Home">Home</a></span>
             <span><a href="#services">Services</a></span>
-            <span><a href="#">About Us</a></span>
             <span><a href="#contact">Contact Us</a></span>
         </nav>
 
@@ -43,23 +42,17 @@
                 <div class="cater">
                     <img src="img/1.png" alt="" id="img1">
                     <h4>Food Ordering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur, ad
-                        doloribus necessitatibus autem sint cumque inventore dolor impedit perspiciatis magni a.
-                        Cupiditate maxime vero inventore aliquid rerum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
                 </div>
                 <div class="cater">
                     <img src="img/2.png" alt="" id="img2">
                     <h4>Catering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur, ad
-                        doloribus necessitatibus autem sint cumque inventore dolor impedit perspiciatis magni a.
-                        Cupiditate maxime vero inventore aliquid rerum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
                 </div>
                 <div class="cater">
                     <img src="img/3.png" alt="" id="img3">
                     <h4>Bulk Ordering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur, ad
-                        doloribus necessitatibus autem sint cumque inventore dolor impedit perspiciatis magni a.
-                        Cupiditate maxime vero inventore aliquid rerum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
                 </div>
             </div>
         </section>
