UI Improved and Meaningful Text placed

--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
         <section id="Home">
             <div class="home">
                 <h2>Welcome to MyOnlineMeal</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elim.   
-                    Autem quae vero, modi repellendus fuga facere
-                    sed doloremque nisi quo temporibus nihil eligendi a, asperiores dolorem, sequi fugit. Veniam,
-                    blanditiis
-                    numquam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cupiditate ratione consectetur
-                    adipisci
-                    quidem reprehenderit repellendus.</p>
+                <p>The food at your doorstep.Why starve when you have us.
+                    Your hunger partner.The one you can count on.
+                    Don’t starve, just order.Good food within minutes
+                    Delivering happiness.Speedy food, good food
+                    Freshness delivered.
+                    Straight out of the oven to your doorstep</p>
+                <p>Best Service to fulfil your expectations.
+                    Let deliciousness twirl in your mouth.
+                    We take the teachings of nature.
+                    The flavours of your wish.
+                    An oasis of deliciousness.</p>
                 <span><a href="#">Order Now</a></span>
             </div>
 
@@ -42,17 +45,26 @@
                 <div class="cater">
                     <img src="img/1.png" alt="" id="img1">
                     <h4>Food Ordering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
+                    <p>Faster than light . Always on time
+                        Faster is always better.
+                        Turbo food,Turbo speed
+                    </p>
                 </div>
                 <div class="cater">
                     <img src="img/2.png" alt="" id="img2">
                     <h4>Catering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
+                    <p>Served better.Think food Think….
+                        Hot as your style.
+                        Delivered to your mouth
+                    </p>
                 </div>
                 <div class="cater">
                     <img src="img/3.png" alt="" id="img3">
                     <h4>Bulk Ordering</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ipsa reiciendis aspernatur.</p>
+                    <p>Delivery first, Satisfaction all time.
+                        Satisfaction Delivered.
+                        Dedicated to serving you
+                    </p>
                 </div>
             </div>
         </section>
